--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -1,10 +1,10 @@
 <section class="container-fluid home-getstarted">
   <div class="d-flex flex-column">
-    <h1>Get started with O3DE</h1>
+    <h1><b>Get started with O3DE</b></h1>
     <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE’s <a href="#" target="_blank">documentation</a>.</h4>
-    <div class="row border getting-statred-view">
+    <div class="row getting-statred-view mt-5">
       <div class="col col-4">
-        <img src="/img/home/GettingStarted1.jpg" class="getStatred-img">
+        <img src="/img/home/GettingStarted1.jpg" class="getStatred-img img-fluid">
       </div>
       <div class="col col-8">
         <h3>Article Tutorial 1</h3>
@@ -16,9 +16,9 @@
         <a href="#" target="_blank">Learn more</a>
       </div>
     </div>
-    <div class="row border getting-statred-view">
+    <div class="row border getting-statred-view mt-5">
       <div class="col col-4">
-        <img src="/img/home/GettingStarted2.jpg" class="getStatred-img">
+        <img src="/img/home/GettingStarted2.jpg" class="getStatred-img img-fluid">
       </div>
       <div class="col col-8">
         <h3>Coming Soon...</h3>
