--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -1,15 +1,92 @@
-<section class="container-fluid home-partners  pl-xl-0 pr-xl-0">
+<section class="container-fluid home-partners">
   <div class="d-flex flex-column align-items-center justify-content-center">
-    <h1>Our Community</h1>
-    <h4>O3DE is built by the community in conjunction with dedicated members, including the following organizations.</h4>
-    <div class="row align-items-center justify-content-center partners-logos-view">
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/AccelByte-logo.svg" class="accelByte-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Adobe-logo.svg" class="adobe-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/ApocalypseStudios-logo.svg" class="aocalypseStudios-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Audiokinetic-logo.svg" class="audiokinetic-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/aws-logo.svg" class="aws-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/backtrace-logo.svg" class="backtrace-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Carbonated-logo.svg" class="carbonated-logo border rounded"></a>
+    <div style="width: 70%">
+      <h1 class="text-center"><b>Our Community</b></h1>
+      <h4 class="text-center">O3DE is built by the community in conjunction with dedicated members, including the following organizations.</h4>
+
+      <div id="carouselExampleIndicators" class="carousel slide mt-4" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row align-items-center justify-content-center partners-logos-view">
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Adobe.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/AWS.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Huawei.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Intel.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Niantic.svg" class="img-fluid"></a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row align-items-center justify-content-center partners-logos-view">
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Adobe.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/AWS.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Huawei.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Intel.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Niantic.svg" class="img-fluid"></a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row align-items-center justify-content-center partners-logos-view">
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Adobe.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/AWS.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Huawei.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Intel.svg" class="img-fluid"></a>
+                </div>
+                <div class="col-3 d-flex align-items-center justify-content-center partners-logo pt-4 pb-4 m-3">
+                  <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Niantic.svg" class="img-fluid"></a>
+                </div>
+              </div>
+            </div>
+        </div>
+
+        <div class="d-flex justify-content-center align-items-center mt-5">
+          <a href="#carouselExampleIndicators" data-slide="prev" class="btn">
+            <i class="fas fa-chevron-left"></i>
+          </a>
+          <div class="carousel-indicators mr-0 ml-0" style="position: relative">
+            <a data-target="#carouselExampleIndicators" data-slide-to="0" class="active btn carousel-btn">
+              <i class="fas fa-circle"></i>
+            </a>
+            <a data-target="#carouselExampleIndicators" data-slide-to="1" class="btn carousel-btn">
+              <i class="fas fa-circle"></i>
+            </a>
+            <a data-target="#carouselExampleIndicators" data-slide-to="2" class="btn carousel-btn">
+              <i class="fas fa-circle"></i>
+            </a>
+          </div>
+          <a href="#carouselExampleIndicators" data-slide="next" class="btn">
+            <i class="fas fa-chevron-right"></i>
+          </a>
+        </div>
+        
+      </div>
+
     </div>
   </div>
 </section>
