--- a/layouts/partials/footer-content.html
+++ b/layouts/partials/footer-content.html
@@ -1,11 +1,11 @@
 {{ $year := now.Year }}
 {{ with site.Copyright }}
 <p>Copyright &copy; {{ $year }} Open 3D Engine Contributors</p>
-<p>
+<p class="mt-4">
     Documentation Distributed under  <a href= "#">CC BY 4.0</a>. For our trademark, privacy and antitrust policies, code of conduct, and terms of use,
     please click the applicable link below or see <a href= "https://www.lfprojects.org">https://www.lfprojects.org</a>.
 </p>
-<div class="d-flex flex-row justify-content-between" style="width: 80%">
+<div class="d-flex flex-row justify-content-between mt-4" style="width: 60%">
     <a href="https://lfprojects.org/policies/trademark-policy">Trademark Policy</a>
     <a href="https://lfprojects.org/policies/privacy-policy/">Privacy Policy</a>
     <a href="https://lfprojects.org/policies/antitrust-policy/">Antitrust Policy</a>
