--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -4,7 +4,7 @@
 <div class="scalable home-hero d-flex align-items-center">
   <div class="container-fluid hero-inner">
     <div class="row">
-      <div class="col col-12 col-xl-7 pl-7">
+      <div class="col col-7">
           <h1 class="title">
             {{ $title }}
           </h1>
