--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -72,7 +72,8 @@ $o3de-black: #000
 $o3de-white: #fff
 $o3de-lightgray: #ddd
 $o3de-blue: #1E71EB
-$o3de-darkblue: #011C46
+$o3de-darkblue: #94D2FF
+// $o3de-darkblue: #011C46
 $o3de-mediumblue: #054CBA
 $o3de-lightblue: #D2EDFF
 $o3de-green: #58BD61
