Minor palette fix
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -558,7 +558,7 @@ $width: '59vw';
       color: $o3de-blue
 
     .btn-link
-      color: #111
+      color: $o3de-black
 
       &:focus
         text-decoration: none
