More footer color fixes
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -71,7 +71,7 @@ $font-family-headers: "Open Sans"
 $o3de-black: #000
 $o3de-white: #fff
 $o3de-lightgray: #ddd
-$o3de-blue: #1E71EB
+$o3de-blue: #1E252F
 $o3de-darkblue: #011C46
 $o3de-mediumblue: #054CBA
 $o3de-lightblue: #D2EDFF
@@ -416,7 +416,7 @@ $width: '59vw';
   background-color: $o3de-darkblue
   .a 
     &:hover, &:active 
-      color: $o3de-darkblue
+      color: $o3de-blue
       text-decoration: none
 
 // layouts/social-buttons.html 
