--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -113,9 +113,9 @@ h1, h2, h3, h4, h5, h6
   margin-top: 1.8rem
 
 a 
-  color: $o3de-blue
+  color: $o3de-mediumblue
   &:hover, &:active 
-    color: $o3de-mediumblue
+    color: $o3de-lightblue
     text-decoration: none
 
 .btn-xl-block
