more footer fixes
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -411,7 +411,7 @@ $width: '59vw';
 // layouts/footer.html 
 
 .footer 
-  background-image: url(/img/home/footer-bg.png)
+  // background-image: url(/img/home/footer-bg.png)
   background-size: cover
   background-color: $o3de-darkblue
   .a 
