--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -75,6 +75,7 @@ $o3de-blue: #1E252F
 $o3de-darkblue: #011C46
 $o3de-mediumblue: #054CBA
 $o3de-lightblue: #D2EDFF
+$o3de-blue-highlight: #94D2FF
 $o3de-green: #58BD61
 
 // General 
@@ -415,8 +416,9 @@ $width: '59vw';
   background-size: cover
   background-color: $o3de-darkblue
   .a 
+    color: $o3de-lightblue
     &:hover, &:active 
-      color: $o3de-blue
+      color: $o3de-blue-highlight
       text-decoration: none
 
 // layouts/social-buttons.html 
