yet more color updates
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -411,16 +411,15 @@ $width: '59vw';
 
 // layouts/footer.html 
 
-.footer 
+.footer
   // background-image: url(/img/home/footer-bg.png)
   background-size: cover
   background-color: $o3de-darkblue
-  .a 
-    color: $o3de-lightblue
-    &:hover, &:active 
+  .a
+    color: $o3de-blue-highlight
+    &:hover, &:active
       color: $o3de-blue-highlight
       text-decoration: none
-
 // layouts/social-buttons.html 
 
 .social 
