--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -421,7 +421,7 @@ $width: '59vw';
   background-size: cover
   background-color: $o3de-darkblue
   .a
-    &link:
+    &link
       color: $o3de-blue-highlight
     &:hover, &:active
       color: $o3de-blue-highlight
