--- a/layouts/partials/footer-content.html
+++ b/layouts/partials/footer-content.html
@@ -2,7 +2,9 @@
 {{ with site.Copyright }}
 <p>Copyright &copy; {{ $year }} Open 3D Engine Contributors</p>
 <p>
-    Documentation Distributed under  <a href= "#">CC BY 4.0</a>. For our trademark, privacy and antitrust policies, code of conduct, and terms of use,
+    Documentation Distributed under  <a href= "#">CC BY 4.0</a>. 
+    <br>
+    For our trademark, privacy and antitrust policies, code of conduct, and terms of use,
     please click the applicable link below or see <a href= "https://www.lfprojects.org">https://www.lfprojects.org</a>.
 </p>
 <div class="d-flex flex-row justify-content-between" style="width: 80%">
@@ -12,4 +14,7 @@
     <a href="https://lfprojects.org/policies/code-of-conduct/">Code of Conduct</a>
     <a href="https://lfprojects.org/policies/terms-of-use/">Terms of Use</a>
 </div>
+<br>
+<p>The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, 
+    please see our <a href="https://www.linuxfoundation.org/trademark-usage/">Trademark Policy</a> page.</p>
 {{ end }}
