Site and CTA text updates from review
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -1,7 +1,7 @@
 <section class="container-fluid home-getstarted">
   <div class="d-flex flex-column">
     <h1>Get started with O3DE</h1>
-    <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE's <a href="/docs/" target="_blank">documentation</a>.</h4>
+    <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE's <a href="https://o3de.org/docs/" target="_blank">documentation</a>.</h4>
     <div class="row border getting-started-view">
       <div class="col col-4">
         <a href="https://www.youtube.com/watch?v=CQmjAxr7LZs" target="_blank"><img src="/img/home/what-is-o3de-video-thumbnail.jpg" class="getStarted-img"></a>
