--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -19,7 +19,7 @@
           {{ end }}
 
           <p class="buttons">
-            <a href="/download" class="mt-4 btn btn-lg text-white download-cta">Clone on GitHub</a>
+            <a href="/download" class="mt-4 btn btn-lg text-white download-cta">Fork O3DE from GitHub</a>
           </p>
         </div>
       </div>
