--- a/layouts/partials/download/download.html
+++ b/layouts/partials/download/download.html
@@ -5,5 +5,5 @@
 <p class="mr-5">Fork the O3DE source and build the engine and tools directly from any branch. For more details, read the documentation.</p>
 
 <p id="download-page-buttons" class="mr-5">
-  <a href="https://github.com/o3de/o3de" class="btn-xl-block btn-lg btn-primary text-white text-center" target="_blank">Clone on GitHub</a>
+  <a href="https://github.com/o3de/o3de" class="btn-xl-block btn-lg btn-primary text-white text-center" target="_blank">Fork O3DE from GitHub</a>
 </p>
