--- a/layouts/partials/download/getting-started.html
+++ b/layouts/partials/download/getting-started.html
@@ -10,7 +10,7 @@
           <div class="card mb-3">
             <h4>Prerequisites</h4>
             <p>Read up on the hardware and platform requirements to build and run O3DE.</p>
-            <div class="learn-more" href="#">Learn more</div>
+            <div class="learn-more" href="https://o3de.org/docs/welcome-guide/setup/requirements/">Learn more</div>
           </div>
         </a>
       </div>
@@ -19,7 +19,7 @@
           <div class="card mb-3">
             <h4>Setting up O3DE from GitHub</h4>
             <p>For the Developer Preview, follow these instructions closely. Save youself a few early adopter headaches!</p>
-            <div class="learn-more" href="#">Learn more</div>
+            <div class="learn-more" href="https://o3de.org/docs/welcome-guide/setup/">Learn more</div>
           </div>
         </a>
       </div>
@@ -28,7 +28,7 @@
           <div class="card mb-3">
             <h4>Creating a project using the CLI</h4>
             <p>Learn to create an O3DE project using the command-line.</p>
-            <div class="learn-more" href="#">Learn more</div>
+            <div class="learn-more" href="https://o3de.org/docs/welcome-guide/get-started/project-config/creating-projects-using-cli/">Learn more</div>
           </div>
         </a>
       </div>
@@ -37,7 +37,7 @@
           <div class="card mb-3">
             <h4>Troubleshooting the setup</h4>
             <p>Rarely do things go perfectly. Check out our initial troubleshooting advice, or contribute your own tips!</p>
-            <div class="learn-more" href="#">Learn more</div>
+            <div class="learn-more" href="https://o3de.org/docs/welcome-guide/setup/troubleshooting/">Learn more</div>
           </div>
         </a>
       </div>
