--- a/layouts/partials/home/download.html
+++ b/layouts/partials/home/download.html
@@ -3,7 +3,7 @@
         <h1>Get started with Open 3D Engine now!</h1>
         <h3>Interesting in kicking the tires? Fork and build O3DE from our GitHub repo!</h3>
         <p class="buttons">
-          <a href="https://o3de.org/docs/welcome-guide/setup/" class="my-3 mr-3 btn text-white download-btn">Check It Out</a>
+          <a href="https://o3de.org/docs/welcome-guide/setup/" class="my-3 mr-3 btn text-white download-btn">O3DE on GitHub</a>
         </p>
     </div>
   </section>
