--- a/layouts/partials/home/download.html
+++ b/layouts/partials/home/download.html
@@ -1,9 +1,9 @@
 <section class="container-fluid home-download">
     <div class="d-flex flex-column align-items-center">
         <h1>Get started with Open 3D Engine now!</h1>
-        <h3>Interesting in kicking the tires? Get O3DE for your platform now!</h3>
+        <h3>Interesting in kicking the tires? Fork and build O3DE from our GitHub repo!</h3>
         <p class="buttons">
-          <a href="#" class="my-3 mr-3 btn text-white download-btn">Get Started</a>
+          <a href="https://o3de.org/docs/welcome-guide/setup/" class="my-3 mr-3 btn text-white download-btn">O3DE on GitHub</a>
         </p>
     </div>
   </section>
