Wrap up second half of the homepage, responsive fixes for mobile
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/layouts/partials/blog-display.html
+++ b/layouts/partials/blog-display.html
@@ -7,7 +7,7 @@
           <p>What’s going on in the O3DE community? Read the blog posts and catch up on the latest news, insights, and feature development.</p>
       </div>
   </div>
-  <div class="row pb-5">
+  <div class="row card-stack pb-5">
     {{ range (.Paginate $posts).Pages }}
     {{ $date := dateFormat "January 2, 2006" .Date }}
     <div class="col col-12">
