--- a/layouts/partials/home/download.html
+++ b/layouts/partials/home/download.html
@@ -1,9 +1,9 @@
-<section class="container-fluid home-download">
-    <div class="d-flex flex-column align-items-center">
-        <h1>Get started with Open 3D Engine now!</h1>
-        <h3>Interesting in kicking the tires? Get O3DE for your platform now!</h3>
+<section class="home-download">
+    <div class="d-flex flex-column align-items-center container pb-4 pt-5">
+        <h2>Download Open 3D Engine now!</h2>
+        <h5 class="mt-2 mb-2">Interesting in kicking the tires? Get O3DE for your platform now!</h5>
         <p class="buttons">
-          <a href="#" class="my-3 mr-3 btn text-white download-btn">Get Started</a>
+          <a href="#" class="my-3 mr-3 btn text-white download-btn btn-lg">Get Started</a>
         </p>
     </div>
   </section>
