--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -1,15 +1,13 @@
-<section class="container-fluid home-partners  pl-xl-0 pr-xl-0">
-  <div class="d-flex flex-column align-items-center justify-content-center">
-    <h1>Our Community</h1>
-    <h4>O3DE is built by the community in conjunction with dedicated members, including the following organizations.</h4>
+<section class="home-partners pt-5 pb-5">
+  <div class="container d-flex flex-column align-items-center justify-content-center">
+    <h2 class="mb-3">Our Community</h2>
+    <p>O3DE is built by the community in conjunction with dedicated members, including the following organizations.</p>
     <div class="row align-items-center justify-content-center partners-logos-view">
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/AccelByte-logo.svg" class="accelByte-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Adobe-logo.svg" class="adobe-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/ApocalypseStudios-logo.svg" class="aocalypseStudios-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Audiokinetic-logo.svg" class="audiokinetic-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/aws-logo.svg" class="aws-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/backtrace-logo.svg" class="backtrace-logo border rounded"></a>
-          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Carbonated-logo.svg" class="carbonated-logo border rounded"></a>
+      <img src="/img/logos/partnerLogos/adobe.svg" class="adobe-logo">
+      <img src="/img/logos/partnerLogos/aws.svg" class="aws-logo">
+      <img src="/img/logos/partnerLogos/huawei.svg" class="huawei-logo">
+      <img src="/img/logos/partnerLogos/intel.svg" class="intel-logo">
+      <img src="/img/logos/partnerLogos/niantic.svg" class="niantic-logo">
     </div>
   </div>
 </section>
