--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,6 +9,8 @@
     </title>
     {{ partial "css.html" . }}
     {{ partial "favicon.html" . }}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
   </head>
   {{ partial "javascript.html" }}
     <body>
