--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -1,7 +1,7 @@
 <div class="container-flex features-outer">
   <section class="home-features">
-    <div class="feature-row">
-      <div class="features-img" style="background-image: url('https://dhs-o.s3.us-east-2.amazonaws.com/images/Feature1.jpg')"></div>
+    <div class="feature-row mt-3 mb-3">
+      <div class="features-img features-img-copy" style="background-image: url('https://dhs-o.s3.us-east-2.amazonaws.com/images/Feature1.jpg')"></div>
       <div class="container pt-5 pb-5">
         <div class="row">
           <div class="features-text col col-12 col-md-7 offset-md-5">
@@ -13,7 +13,7 @@
         </div>
       </div>
     </div>
-    <div class="feature-row">
+    <div class="feature-row mt-3 mb-3">
       <div class="features-img-reverse" style="background-image: url('/img/home/feature2.jpg')"></div>
       <div class="container pt-5 pb-5">
         <div class="row">
@@ -28,7 +28,7 @@
         </div>
       </div>
     </div>
-    <div class="feature-row">
+    <div class="feature-row mt-3 mb-3">
       <div class="features-img" style="background-image: url('/img/home/feature3.jpg')"></div>
       <div class="container pt-5 pb-5">
         <div class="row">
