--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -312,6 +312,10 @@ $width: '59vw';
   display: block
   font-weight: 600
   color: $o3de-blue
+  
+.learn-more-inline
+  font-weight: 600
+  color: $o3de-blue
 
 .active-os-cta
   background-color: $o3de-blue
