--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -22,7 +22,7 @@
       </a>
     </div>
     <div class="col col-12">
-      <a class="card mb-3" href="https://github.com/o3de/o3de.org/issues">
+      <a class="card mb-3" href="https://github.com/o3de/o3de.org/issues" target="_blank">
         <div class="row">
           <div class="col-md-4 card-image" style="background-image: url('/img/home/GettingStarted2.jpg')"></div>
           <div class="col col-md-8">
@@ -31,7 +31,7 @@
               <p class="card-text">
                 We are currently working hard to give you a better experience and provide
                 more tutorials. If you want to check in on the creation process, you are
-                welcome to take a peek on GitHub.
+                welcome to <span class="learn-more-inline">take a peek on GitHub</span>.
               </p>
             </div>
           </div>
