--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -71,7 +71,7 @@ $font-family-headers: "Open Sans"
 $o3de-black: #000
 $o3de-white: #fff
 $o3de-lightgray: #ddd
-$o3de-blue: #1E252F
+$o3de-blue: #1E71EB
 $o3de-darkblue: #011C46
 $o3de-mediumblue: #054CBA
 $o3de-lightblue: #D2EDFF
@@ -82,6 +82,7 @@ $o3de-green: #58BD61
 
 body
   font-family: $font-family-headers
+  min-width: 360px
 
 .breadcrumb 
   li
@@ -220,6 +221,10 @@ $width: '59vw';
   max-height: 800px
   width: 100%
   
+  @include media-breakpoint-down(md)
+    background-image: url('https://dhs-o.s3.us-east-2.amazonaws.com/images/Hero3-1366x636.jpg')
+    background-position: 80% 100%
+  
   @include media-breakpoint-down(xxl)
     background-image: url('https://dhs-o.s3.us-east-2.amazonaws.com/images/Hero3-1600x500.jpg')
 
@@ -233,6 +238,21 @@ $width: '59vw';
   .desc
     font-weight: 300
     line-height: 1.5rem
+  
+  @include media-breakpoint-down(md)
+    background-color: rgba(0,0,0,.2)
+
+    h4
+      width: 72%
+      line-height: 2.5rem
+      font-size: 1.8rem
+      margin: 0
+
+    .desc
+      line-height: 1.25rem
+      margin-top: 24px !important
+      font-size: .85rem
+      width: 85%
 
 .learnmore-cta 
   background-color: $o3de-green
@@ -244,6 +264,10 @@ $width: '59vw';
   padding: 4px 16px
   &:hover 
     background-color: darken(#1E71EB, 10%)
+  
+  @include media-breakpoint-down(md)
+    width: 100%
+    margin-top: 0 !important
 
 
 // layouts/partial/download/hero.html
@@ -288,6 +312,10 @@ $width: '59vw';
   display: block
   font-weight: 600
   color: $o3de-blue
+  
+.learn-more-inline
+  font-weight: 600
+  color: $o3de-blue
 
 .active-os-cta
   background-color: $o3de-blue
@@ -305,35 +333,68 @@ $width: '59vw';
   max-width: 1600px
   margin: 0 auto
   padding: 72px 0
+  @include media-breakpoint-down(md)
+    padding: 36px 0
+
 
 .feature-row
   position: relative
   display: block
-  padding: 32px 0
+  @include media-breakpoint-up(md)
+    padding: 32px 0
 
 .features-img
-  left: 0
-  right: 50%
-  top: 0
-  bottom: 0
-  position: absolute;
-  margin-right: 110px
-  background-position: 50% 0
   background-size: cover
   
+  @include media-breakpoint-up(md)
+    left: 0
+    right: 50%
+    top: 0
+    bottom: 0
+    position: absolute;
+    margin-right: 110px
+    background-position: 100% 0
+  
+  @include media-breakpoint-down(sm)
+    display: block
+    width: 100%
+    padding-bottom: 50%
+    background-position: 0 50%
+  
 .features-img-reverse
-  left: 50%
-  right: 0
-  top: 0
-  bottom: 0
-  position: absolute;
-  margin-left: 110px
-  background-position: 50% 0
   background-size: cover
+  
+  @include media-breakpoint-up(md)
+    left: 50%
+    right: 0
+    top: 0
+    bottom: 0
+    position: absolute;
+    margin-left: 110px
+    background-position: 0 0
+  
+  @include media-breakpoint-down(sm)
+    display: block
+    width: 100%
+    padding-bottom: 50%
+    background-position: 0 0
+
+.features-img-copy
+  @include media-breakpoint-down(sm)
+    background-position: 0 100%
+
 
 .features-text
   h2
     margin: 0 0 24px
+
+    @include media-breakpoint-down(md)
+      font-size: 1.8rem
+    
+  @include media-breakpoint-down(sm)
+    text-align: center
+    padding: 0 32px
+    margin: 0
 
 .feature
   margin-top: 2rem
@@ -351,84 +412,61 @@ $width: '59vw';
 
 .home-partners
   background-color: #EEEEEE
-  padding-top: 72px
-  padding-bottom: 72px
+  @include media-breakpoint-down(md)
+    padding: 0 24px
+
+  h2
+    font-weight: 600
+  
+  p
+    text-align: center
 
 .partners-logos-view
-  width: 80%
-  margin-top: 40px
+  padding: 16px 0
+  @include media-breakpoint-down(md)
+    max-width: 360px
 
-.accelByte-logo
-  background-color: white
-  padding: 35px 75px 35px 75px
-  margin: 12px
+  img
+    margin: 0 12px
+    padding: 8px 0
+    height: 80px
+    width: auto
 
-.adobe-logo
-  background-color: white
-  padding: 35px 75px 35px 75px
-  margin: 9px
+  .aws-logo
+    padding: 12px 0 4px
 
-.aocalypseStudios-logo
-  background-color: white
-  padding: 35px 75px 35px 75px
-  margin: 9px
-
-.audiokinetic-logo
-  background-color: white
-  padding: 40px 95px 40px 95px;
-  margin: 9px
-
-.aws-logo
-  background-color: white
-  padding: 35px 65px 35px 65px;
-  margin: 9px
-
-.backtrace-logo
-  background-color: white
-  padding: 30px 50px 30px 50px;
-  margin: 9px
-
-.carbonated-logo
-  background-color: white
-  padding: 25px 50px 25px 50px;
-  margin: 9px
-
+  .intel-logo
+    height: 68px
+    padding: 14px 0
   
-// layouts/partials/home/get-started.html 
+  .niantic-logo
+    height: 86px;
+    padding: 5px 0
+
+
+//layouts/partials/home/get-started.html
 
 .home-getstarted
-  width: 70%
-  padding-top: 72px
-  padding-bottom: 72px
+  h2
+    font-weight: 600
 
-.getting-started-view
-  height: 180px
-  margin-top: 40px
+  @include media-breakpoint-down(md)
+    text-align: center
 
-.getStarted-img
-  height: 100%
-  margin-left: -14px
-
-.getstarted-text-width
-  padding-right: 50px
-  margin-bottom: 10px
-
-  
 // layouts/partials/home/download.html 
 
 .home-download  
   background-image: url('/img/home/download-bg.jpg')
   background-size: cover;
-  background-repeat: no-repeat
+  background-position: 50% 50%
+  text-align: center
   color: $o3de-white
-  margin-bottom: -48px;
-  padding-top: 72px
-  padding-bottom: 72px
 
 .download-btn 
   background-color: $o3de-blue
-  width: 240px
-  height: 36px
+  line-height: 1.5rem
+  padding-left: 24px
+  padding-right: 24px
   &:hover 
     background-color: darken(#1E71EB, 10%)
 
@@ -436,15 +474,15 @@ $width: '59vw';
 // layouts/footer.html 
 
 .footer
-  // background-image: url(/img/home/footer-bg.png)
   background-size: cover
   background-color: $o3de-darkblue
-  .a
-    &:link
-      color: $o3de-blue-highlight
+  a
+    color: $o3de-blue-highlight
+
     &:hover, &:active
       color: $o3de-blue-highlight
       text-decoration: none
+
 // layouts/social-buttons.html 
 
 .social 
@@ -496,6 +534,7 @@ $width: '59vw';
 .community-blog
   background: #111
 
+.card-stack
   a.card
     color: $o3de-black
     min-height: 10rem
@@ -504,11 +543,17 @@ $width: '59vw';
     .card-body
       padding: 1.6rem 1rem 0 0.2rem
 
+      @include media-breakpoint-down(sm)
+        padding: 1.5rem
+
   .card-image
     background-color: #C4C4C4
     background-size: cover
     background-position: 50% 50%
     padding-bottom: 10rem
+    
+    @include media-breakpoint-down(sm)
+      padding-bottom: 14rem
 
 // Docs pages 
 
@@ -529,11 +574,16 @@ $width: '59vw';
     margin-top: 0
 
   .card-image
-    position: absolute;
-    left: 0
-    top: 0
-    bottom: 0
     width: 100%
+
+    @include media-breakpoint-up(md)
+      position: absolute;
+      left: 0
+      top: 0
+      bottom: 0
+
+    @include media-breakpoint-down(md)
+      padding-bottom: 36%
   
 .card-image
   background-size: cover
