Bugfix roundup after last review with Lee
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -4,6 +4,8 @@
 
 {{ define "main" }}
 {{ partial "blog/hero.html" . }}
-{{ partial "blog/content.html" . }}
+<div class="blog-single-content">
+    {{ partial "blog/content.html" . }}
+</div>
 {{ partial "footer.html" . }}
 {{ end }}
