--- a/layouts/partials/blog/content.html
+++ b/layouts/partials/blog/content.html
@@ -5,8 +5,7 @@
       <div class="">
         {{ .Content }}
       </div>
-
-      <a class="btn btn-primary" href="/blog">
+      <a class="btn btn-primary back-to-blog" href="/blog">
         <span>
           Back to blogs
         </span>
