--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -4,7 +4,7 @@
       <div class="features-img features-img-copy" style="background-image: url('https://dhs-o.s3.us-east-2.amazonaws.com/images/Feature1.jpg')"></div>
       <div class="container pt-5 pb-5">
         <div class="row">
-          <div class="features-text col col-12 col-md-7 offset-md-5">
+          <div class="features-text col col-12 col-lg-7 offset-lg-5">
             <h2>Create AAA games and high-fidelity simulations</h2>
             <p>O3DE has been developed with with cutting-edge, real-time graphics and complex interactions in mind. 
               Create robust, engaging experiences with O3DE's multi-threaded photorealistic renderer, extensible 3D content editor,
@@ -17,7 +17,7 @@
       <div class="features-img-reverse" style="background-image: url('/img/home/feature2.jpg')"></div>
       <div class="container pt-5 pb-5">
         <div class="row">
-          <div class="features-text col col-12 col-md-7">
+          <div class="features-text col col-12 col-lg-7">
             <h2>Built for extensibility</h2>
             <p>O3DE's modular architecture is built for customization from day one. 
               Each one of O3DE's integrated components (called "Gems") can be adopted separately, 
@@ -32,7 +32,7 @@
       <div class="features-img" style="background-image: url('/img/home/feature3.jpg')"></div>
       <div class="container pt-5 pb-5">
         <div class="row">
-          <div class="features-text col col-12 col-md-7 offset-md-5">
+          <div class="features-text col col-12 col-lg-7 offset-lg-5">
             <h2>Integrate with your favorite cloud services</h2>
           <p>O3DE's Gem system provides integrations and support for cloud services to add additional functionality
               to games and simulations. Choose from existing backend cloud modules, 
