--- a/layouts/partials/footer-content.html
+++ b/layouts/partials/footer-content.html
@@ -7,7 +7,7 @@
     For our trademark, privacy and antitrust policies, code of conduct, and terms of use,
     please click the applicable link below or see <a href= "https://www.lfprojects.org">https://www.lfprojects.org</a>.
 </p>
-<div class="d-flex flex-row justify-content-between" style="width: 80%">
+<div class="footer-links">
     <a href="https://lfprojects.org/policies/trademark-policy">Trademark Policy</a>
     <a href="https://lfprojects.org/policies/privacy-policy/">Privacy Policy</a>
     <a href="https://lfprojects.org/policies/antitrust-policy/">Antitrust Policy</a>
