Added all partials for contribute landing
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/layouts/partials/contribute/sigs.html
+++ b/layouts/partials/contribute/sigs.html
@@ -1,63 +1,37 @@
 {{ $title := site.Title }}
 {{ $desc  := site.Params.description | markdownify }}
-<div class="d-flex align-items-center">
-  <div class="container text-center pb-2">
-    <div class="row">
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Build
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Content
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Core
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Docs
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Network
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Platform
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Presentation
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Release
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Security
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-Testing
-        </div>
-      </div>
-      <div class="col-2 col-md-2">
-        <div class="card">
-          SIG-UI-UX
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="contribute-sigs">
+    <a href="#" class="card sig-card">
+      SIG-Build
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-Content
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-Core
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-Docs
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-Network
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-Platform
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-Presentation
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-Release
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-Security
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-Testing
+    </a>
+    <a href="#" class="card sig-card">
+      SIG-UI-UX
+    </a>
 </div>
