--- a/layouts/partials/footer-content.html
+++ b/layouts/partials/footer-content.html
@@ -2,7 +2,7 @@
 {{ with site.Copyright }}
 <p>Copyright &copy; {{ $year }} Open 3D Engine Contributors</p>
 <p>
-    Documentation Distributed under  <a href= "#">CC BY 4.0</a>. 
+    Documentation Distributed under  <a href= "https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>. 
     <br>
     For our trademark, privacy and antitrust policies, code of conduct, and terms of use,
     please click the applicable link below or see <a href= "https://www.lfprojects.org">https://www.lfprojects.org</a>.
