Signed-off-by: Stephen Tramer <169061+sptramer@users.noreply.github.com>Update layouts/partials/contribute/contribute.html

--- a/layouts/partials/contribute/contribute.html
+++ b/layouts/partials/contribute/contribute.html
@@ -5,7 +5,7 @@
     <div class="github-box">
       <h3><i class="fab fa-github"></i>Contribute to Code</h3>
       <p>O3DE is developed based on the strength of its expert community. We'd love to have you contribute, too! Read our guidance on contributing to O3DE.</p>
-      <a href="https://github.com/o3de/o3de/tree/main" class="learn-more">View on GitHub</a>
+      <a href="https://github.com/o3de/o3de/" class="learn-more">View on GitHub</a>
     </div>
   </div>
   <div class="col-12 col-lg-8">
