abbreviated sig-docs-community for current layout needs
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/contribute/sigs.html
+++ b/layouts/partials/contribute/sigs.html
@@ -11,7 +11,7 @@
       SIG-Core
     </a>
     <a href="https://github.com/o3de/sig-docs-community" class="card sig-card">
-      SIG-Docs-Community
+      SIG-Docs
     </a>
     <a href="https://github.com/o3de/sig-network" class="card sig-card">
       SIG-Network
