--- a/layouts/partials/section-nav.html
+++ b/layouts/partials/section-nav.html
@@ -34,7 +34,7 @@
                 {{ range .CurrentSection.Pages }}
                 <ul class="section-nav-subsection">
                   <li>
-                    {{ if .IsSection }}<i id="docs-chevron" class="fas fa-chevron-right"></i> {{ end }}<a class="section-nav-link" href="{{ .Permalink }}"> 
+                    {{ if .IsSection }}{{ end }}<a class="section-nav-link" href="{{ .Permalink }}"> 
                     {{ .Page.LinkTitle | markdownify }}
                     </a>
                       {{ if .IsSection }}
