--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -790,6 +790,12 @@ $width: '59vw';
 .accordion
   .btn-link
     font-weight: 600
+    
+.show-content
+  display: block
+
+.hide-content
+  display: none
 
 // layouts/section-nav.html 
 
