--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -26,11 +26,11 @@
           {{ partial "menu-loop.html" . }}
         </div>  
     
-        <!--
-        <div class="buttons">
-          <a href="#" target="_blank"><img src="/img/home/Search.svg"></a>
+        
+        <div class="search">
+          {{ partial "search.html" . }}
         </div>
-        -->
+       
       </div>  
   </div> 
 </div>
