--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -249,7 +249,7 @@ $width: '59vw';
     &::before
       content: ''
       background-color: rgba(0,0,0,.2)
-      position: absolute;
+      position: absolute
       left: 0
       top: 0
       right: 0
